--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta name="description" content="DESCRIPTION META TAG">
   <meta property="og:title" content="Are LLMs Prescient? A Continuous Evaluation using Daily News as the Oracle"/>
   <meta property="og:description" content="Daily Oracle: a continuous evaluation benchmark using automatically generated QA pairs from daily news to assess how the future prediction capabilities of LLMs evolve over time"/>
-  <meta property="og:url" content="URL OF THE WEBSITE"/> <!-- TODO -->
+  <meta property="og:url" content="https://agenticlearning.ai/daily-oracle/"/>
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
-  <meta property="og:image" content="static/image/your_banner_image.png" />
+  <meta property="og:image" content="static/images/qa-gen-plot-v2.png" />
   <meta property="og:image:width" content="1200"/>
   <meta property="og:image:height" content="630"/>
 
@@ -20,7 +20,7 @@
   <meta name="twitter:image" content="static/images/your_twitter_banner_image.png">
   <meta name="twitter:card" content="summary_large_image">
   <!-- Keywords for your paper to be indexed by-->
-  <meta name="keywords" content="KEYWORDS SHOULD BE PLACED HERE">
+  <meta name="keywords" content="Continous Evaluation,LLM">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
@@ -74,7 +74,7 @@
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
+                        <a href="https://arxiv.org/pdf/2411.08324.pdf" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
@@ -105,27 +105,30 @@
                   </a>
                 </span> -->
 
-                <!-- Dataset link -->
-                  <span class="link-block">
-                    <a href="https://drive.google.com/drive/folders/1zMmV5RRxBIcwavxhLvAz-0ZlkVeQPQRG?usp=drive_link" target="_blank"
-                    class="external-link button is-normal is-rounded is-dark">
-                    <span class="icon">
-                      <i class="fab fa-google-drive"></i>
-                    </span>
-                    <span>Dataset</span>
-                  </a>
-                </span>
+
 
                 <!-- ArXiv abstract Link -->
-                <!-- <span class="link-block">
-                  <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
+                <span class="link-block">
+                  <a href="https://arxiv.org/abs/2411.08324" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
                   </span>
                   <span>arXiv</span>
                 </a>
-              </span> -->
+              </span>
+
+              <!-- Dataset link -->
+              <span class="link-block">
+                <a href="https://drive.google.com/drive/folders/1zMmV5RRxBIcwavxhLvAz-0ZlkVeQPQRG?usp=drive_link" target="_blank"
+                class="external-link button is-normal is-rounded is-dark">
+                <span class="icon">
+                  <i class="fab fa-google-drive"></i>
+                </span>
+                <span>Dataset</span>
+              </a>
+            </span>
+            
             </div>
           </div>
         </div>
