--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
   <title>Daily Oracle</title>
   <!-- <link rel="icon" type="image/x-icon" href="static/images/favicon.ico"> -->
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📰</text></svg>">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
 
@@ -56,11 +57,11 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a target="_blank">Hui Dai</a>,</span>
-                <span class="author-block">
+                <a href="https://ameliadai.github.io/" target="_blank">Hui Dai</a>,</span>
+                  <span class="author-block">
                   <a href="https://rteehas.github.io/" target="_blank">Ryan Teehan</a>,</span>
                   <span class="author-block">
-                    <a href="https://mengyeren.com/" target="_blank">Mengye Ren</a>
+                  <a href="https://mengyeren.com/" target="_blank">Mengye Ren</a>
                   </span>
                   </div>
 
