--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 <!-- ===== Interactive Analysis Section ===== -->
   <section class="section">
     <div class="container is-max-desktop">
-      <h2 class="title is-5">Browse Daily QA pairs</h2>
+      <h2 class="title is-4">Browse Daily QA Pairs</h2>
       <!-- QA Browser -->
       <div class="box">
         <div class="columns">
